azuredeploy/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "suffix": {
      "type": "string",
      "minLength": 1,
      "maxLength": 3
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]"
    },
    "virtual_machine_username": {
      "type": "string"
    },
    "virtual_machine_public_key": {
      "type": "securestring"
    }
  },
  "variables": {
    "name": "azimmwksh",

    "virtual_network_name": "[concat(variables('name'), '-', parameters('suffix'), '-vnet')]",
    "virtual_network_address_prefixes": [
      "172.16.0.0/24"
    ],
    "virtual_network_subnets": [
      {
        "name": "default",
        "properties": {
          "addressPrefix": "172.16.0.0/24"
        }
      }
    ],
    "virtual_network_id": "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks', variables('virtual_network_name'))]",
    "subnet_name": "default",
    "subnet_id": "[concat(variables('virtual_network_id'), '/subnets/', variables('subnet_name'))]",
    "network_security_group_name": "[concat(variables('name'), '-', parameters('suffix'), '-nsg')]",
    "network_security_group_rules": [
      {
        "name": "Allow-SSH-Inbound",
        "properties": {
          "priority": 100,
          "protocol": "TCP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "22"
        }
      },
      {
        "name": "Allow-App-Endpoints-Inbound",
        "properties": {
          "priority": 200,
          "protocol": "*",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "3000-3010"
        }
      }
    ],
    "network_security_group_id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('network_security_group_name'))]",
    "public_ip_address_name": "[concat(variables('name'), '-', parameters('suffix'), '-pip')]",
    "public_ip_address_allocation_method": "Dynamic",
    "public_ip_address_sku": "Basic",
    "network_interface_card_name": "[concat(variables('name'), '-', parameters('suffix'), '-nic')]",
    "virtual_machine_name": "[concat(variables('name'), '-', parameters('suffix'), '-vm')]",
    "virtual_machine_size": "Standard_D2s_v3",
    "virtual_machine_os_disk_type": "StandardSSD_LRS",
    "container_registry_name": "[concat(variables('name'), parameters('suffix'))]",
    "container_registry_sku": "Standard",
    "container_registry_admin_user_enabled": true
  },
  "resources": [
    {
      "name": "[variables('virtual_network_name')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2019-02-01",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": "[variables('virtual_network_address_prefixes')]"
        },
        "subnets": "[variables('virtual_network_subnets')]"
      }
    },
    {
      "name": "[variables('network_security_group_name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-02-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": "[variables('network_security_group_rules')]"
      }
    },
    {
      "name": "[variables('public_ip_address_name')]",
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2019-02-01",
      "location": "[parameters('location')]",
      "properties": {
        "publicIpAllocationMethod": "[variables('public_ip_address_allocation_method')]"
      },
      "sku": {
        "name": "[variables('public_ip_address_sku')]"
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2018-10-01",
      "name": "[variables('network_interface_card_name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('network_security_group_name'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtual_network_name'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('public_ip_address_name'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnet_id')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIpAddresses', variables('public_ip_address_name'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[variables('network_security_group_id')]"
        }
      }
    },
    {
      "name": "[variables('virtual_machine_name')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2018-10-01",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('network_interface_card_name'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('virtual_machine_size')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "[variables('virtual_machine_os_disk_type')]"
            }
          },
          "imageReference": {
            "publisher": "Canonical",
            "offer": "UbuntuServer",
            "sku": "18.04-LTS",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('network_interface_card_name'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('virtual_machine_name')]",
          "adminUsername": "[parameters('virtual_machine_username')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[concat('/home/', parameters('virtual_machine_username'), '/.ssh/authorized_keys')]",
                  "keyData": "[parameters('virtual_machine_public_key')]"
                }
              ]
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.ContainerRegistry/registries",
      "apiVersion": "2017-10-01",
      "name": "[variables('container_registry_name')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[variables('container_registry_sku')]"
      },
      "properties": {
        "adminUserEnabled": "[variables('container_registry_admin_user_enabled')]"
      }
    }
  ],
  "outputs": {
    "virtual_machine_username": {
      "type": "string",
      "value": "[parameters('virtual_machine_username')]"
    }
  }
}
